<resources>
    <string name="app_name">GABO Notes</string>
    <string name="note_title">Title</string>
    <string name="note_description">Description</string>
    <string name="note_tag">Tag</string>
    <string name="dialog_btn">Create note</string>
    <string name="dialog_title">New Note</string>
    <string name="tags_title">Tags</string>

    <string name="remove_note_confirm_title">Remove Note</string>
    <string name="remove_tag_confirm_message">Are you sure you want to remove %s?</string>
    <string name="confirm_alert_positive_action">Yes</string>
    <string name="confirm_alert_negative_action">Cancel</string>

</resources>