<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="270dp"
    android:layout_height="wrap_content"
    android:background="@color/background_app"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/dialog_title"
        style="@style/DialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_title" />

    <EditText
        android:id="@+id/edit_note"
        style="@style/Inputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note_title" />

    <EditText
        android:id="@+id/edit_description"
        style="@style/Inputs"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:hint="@string/note_description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_add_tag"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="Tag"
            android:textColor="@color/white"
            android:layout_weight="3"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_tag_name"
            style="@style/TextAppearance.Material3.BodySmall"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Cenfotec"
            android:layout_weight="3"
            />

        <ImageView
            android:id="@+id/iv_add_tag_chevron"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/ic_chevron_right"
            android:layout_weight="0"
            android:tint="@color/white"
            />


    </LinearLayout>



    <Button
        android:id="@+id/btn_dialog_add"
        style="@style/AddButtonDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_btn" />


</LinearLayout>